[workspace]
members = [
  "mgmt/activedirectory",
  "mgmt/addons",
  "mgmt/adhybridhealthservice",
  "mgmt/adp",
  "mgmt/advisor",
  "mgmt/agrifood",
  "mgmt/alertsmanagement",
  "mgmt/analysisservices",
  "mgmt/apimanagement",
  "mgmt/app",
  "mgmt/appconfiguration",
  "mgmt/applicationinsights",
  "mgmt/appplatform",
  "mgmt/arcdata",
  "mgmt/attestation",
  "mgmt/authorization",
  "mgmt/automanage",
  "mgmt/automation",
  "mgmt/baremetalinfrastructure",
  "mgmt/batch",
  "mgmt/billing",
  "mgmt/blockchain",
  "mgmt/blueprint",
  "mgmt/botservice",
  "mgmt/cdn",
  "mgmt/changeanalysis",
  "mgmt/chaos",
  "mgmt/cloudshell",
  "mgmt/cognitiveservices",
  "mgmt/commerce",
  "mgmt/communication",
  "mgmt/compute",
  "mgmt/confidentialledger",
  "mgmt/confluent",
  "mgmt/connectedvmware",
  "mgmt/consumption",
  "mgmt/containerinstance",
  "mgmt/containerregistry",
  "mgmt/containerservice",
  "mgmt/cosmosdb",
  "mgmt/costmanagement",
  "mgmt/cpim",
  "mgmt/customerinsights",
  "mgmt/customerlockbox",
  "mgmt/customproviders",
  "mgmt/dashboard",
  "mgmt/data",
  "mgmt/databox",
  "mgmt/databoxedge",
  "mgmt/databricks",
  "mgmt/datacatalog",
  "mgmt/datadog",
  "mgmt/datafactory",
  "mgmt/datalakeanalytics",
  "mgmt/datalakestore",
  "mgmt/datamigration",
  "mgmt/dataprotection",
  "mgmt/datashare",
  "mgmt/deploymentmanager",
  "mgmt/desktopvirtualization",
  "mgmt/devcenter",
  "mgmt/developerhub",
  "mgmt/deviceupdate",
  "mgmt/devops",
  "mgmt/devspaces",
  "mgmt/devtestlabs",
  "mgmt/dfp",
  "mgmt/digitaltwins",
  "mgmt/dnc",
  "mgmt/dns",
  "mgmt/dnsresolver",
  "mgmt/domainservices",
  "mgmt/dynatrace",
  "mgmt/edgeorder",
  "mgmt/edgeorderpartner",
  "mgmt/education",
  "mgmt/elastic",
  "mgmt/elasticsan",
  "mgmt/engagementfabric",
  "mgmt/enterpriseknowledgegraph",
  "mgmt/eventgrid",
  "mgmt/eventhub",
  "mgmt/extendedlocation",
  "mgmt/fluidrelay",
  "mgmt/frontdoor",
  "mgmt/guestconfiguration",
  "mgmt/hanaon",
  "mgmt/hardwaresecuritymodules",
  "mgmt/hdinsight",
  "mgmt/healthbot",
  "mgmt/healthcareapis",
  "mgmt/hybridcompute",
  "mgmt/hybridconnectivity",
  "mgmt/hybriddatamanager",
  "mgmt/hybridkubernetes",
  "mgmt/hybridnetwork",
  "mgmt/imagebuilder",
  "mgmt/intune",
  "mgmt/iotcentral",
  "mgmt/iothub",
  "mgmt/iotspaces",
  "mgmt/keyvault",
  "mgmt/kubernetesconfiguration",
  "mgmt/kusto",
  "mgmt/labservices",
  "mgmt/loadtestservice",
  "mgmt/logic",
  "mgmt/logz",
  "mgmt/m365securityandcompliance",
  "mgmt/machinelearning",
  "mgmt/machinelearningcompute",
  "mgmt/machinelearningexperimentation",
  "mgmt/machinelearningservices",
  "mgmt/maintenance",
  "mgmt/managednetwork",
  "mgmt/managedservices",
  "mgmt/managementgroups",
  "mgmt/managementpartner",
  "mgmt/maps",
  "mgmt/mariadb",
  "mgmt/marketplace",
  "mgmt/marketplacecatalog",
  "mgmt/marketplacenotifications",
  "mgmt/marketplaceordering",
  "mgmt/mediaservices",
  "mgmt/migrate",
  "mgmt/migrateprojects",
  "mgmt/mobilenetwork",
  "mgmt/monitor",
  "mgmt/msi",
  "mgmt/mysql",
  "mgmt/netapp",
  "mgmt/network",
  "mgmt/networkfunction",
  "mgmt/nginx",
  "mgmt/notificationhubs",
  "mgmt/oep",
  "mgmt/operationalinsights",
  "mgmt/operationsmanagement",
  "mgmt/orbital",
  "mgmt/peering",
  "mgmt/policyinsights",
  "mgmt/portal",
  "mgmt/postgresql",
  "mgmt/postgresqlhsc",
  "mgmt/powerbidedicated",
  "mgmt/powerbiembedded",
  "mgmt/powerbiprivatelinks",
  "mgmt/powerplatform",
  "mgmt/privatedns",
  "mgmt/providerhub",
  "mgmt/purview",
  "mgmt/quantum",
  "mgmt/quota",
  "mgmt/recommendationsservice",
  "mgmt/recoveryservices",
  "mgmt/recoveryservicesbackup",
  "mgmt/recoveryservicessiterecovery",
  "mgmt/redhatopenshift",
  "mgmt/redis",
  "mgmt/redisenterprise",
  "mgmt/relay",
  "mgmt/reservations",
  "mgmt/resourceconnector",
  "mgmt/resourcegraph",
  "mgmt/resourcehealth",
  "mgmt/resourcemover",
  "mgmt/resources",
  "mgmt/saas",
  "mgmt/scheduler",
  "mgmt/scvmm",
  "mgmt/search",
  "mgmt/security",
  "mgmt/securityandcompliance",
  "mgmt/securityinsights",
  "mgmt/serialconsole",
  "mgmt/servicebus",
  "mgmt/servicefabricmanagedclusters",
  "mgmt/servicefabricmesh",
  "mgmt/servicelinker",
  "mgmt/servicemap",
  "mgmt/signalr",
  "mgmt/softwareplan",
  "mgmt/solutions",
  "mgmt/sql",
  "mgmt/sqlvirtualmachine",
  "mgmt/stack",
  "mgmt/storage",
  "mgmt/storagecache",
  "mgmt/storageimportexport",
  "mgmt/storagemover",
  "mgmt/storagepool",
  "mgmt/storagesync",
  "mgmt/storsimple1200series",
  "mgmt/storsimple8000series",
  "mgmt/streamanalytics",
  "mgmt/subscription",
  "mgmt/support",
  "mgmt/synapse",
  "mgmt/testbase",
  "mgmt/timeseriesinsights",
  "mgmt/trafficmanager",
  "mgmt/vi",
  "mgmt/videoanalyzer",
  "mgmt/visualstudio",
  "mgmt/vmware",
  "mgmt/vmwarecloudsimple",
  "mgmt/web",
  "mgmt/webpubsub",
  "mgmt/windowsesu",
  "mgmt/windowsiot",
  "mgmt/workloadmonitor",
  "mgmt/workloads",
  "svc/appconfiguration",
  "svc/applicationinsights",
  "svc/attestation",
  "svc/batch",
  "svc/blobstorage",
  "svc/containerregistry",
  "svc/cosmosdb",
  "svc/datalakeanalytics",
  "svc/deviceprovisioningservices",
  "svc/deviceupdate",
  "svc/digitaltwins",
  "svc/eventgrid",
  "svc/filestorage",
  "svc/graphrbac",
  "svc/imds",
  "svc/iotcentral",
  "svc/keyvault",
  "svc/loadtestservice",
  "svc/marketplacecatalog",
  "svc/mixedreality",
  "svc/monitor",
  "svc/operationalinsights",
  "svc/purview",
  "svc/quantum",
  "svc/queuestorage",
  "svc/schemaregistry",
  "svc/servicefabric",
  "svc/storagedatalake",
  "svc/synapse",
  "svc/timeseriesinsights",
  "svc/videoanalyzer",
  "svc/webpubsub",
]