[workspace]
members = [
  "mgmt/activedirectory",
  "mgmt/addons",
  "mgmt/adhybridhealthservice",
  "mgmt/adp",
  "mgmt/advisor",
  "mgmt/agrifood",
  "mgmt/alertsmanagement",
  "mgmt/analysisservices",
  "mgmt/apicenter",
  "mgmt/apimanagement",
  "mgmt/app",
  "mgmt/appcomplianceautomation",
  "mgmt/appconfiguration",
  "mgmt/applicationinsights",
  "mgmt/appplatform",
  "mgmt/arcdata",
  "mgmt/attestation",
  "mgmt/authorization",
  "mgmt/automanage",
  "mgmt/automation",
  "mgmt/baremetalinfrastructure",
  "mgmt/batch",
  "mgmt/billing",
  "mgmt/billingbenefits",
  "mgmt/blockchain",
  "mgmt/blueprint",
  "mgmt/botservice",
  "mgmt/cdn",
  "mgmt/changeanalysis",
  "mgmt/chaos",
  "mgmt/cloudshell",
  "mgmt/cognitiveservices",
  "mgmt/commerce",
  "mgmt/communication",
  "mgmt/compute",
  "mgmt/confidentialledger",
  "mgmt/confluent",
  "mgmt/connectedvmware",
  "mgmt/consumption",
  "mgmt/containerinstance",
  "mgmt/containerregistry",
  "mgmt/containerstorage",
  "mgmt/cosmosdb",
  "mgmt/costmanagement",
  "mgmt/cpim",
  "mgmt/customerinsights",
  "mgmt/customerlockbox",
  "mgmt/customproviders",
  "mgmt/dashboard",
  "mgmt/data",
  "mgmt/databox",
  "mgmt/databoxedge",
  "mgmt/databricks",
  "mgmt/datacatalog",
  "mgmt/datadog",
  "mgmt/datafactory",
  "mgmt/datalakeanalytics",
  "mgmt/datalakestore",
  "mgmt/datamigration",
  "mgmt/dataprotection",
  "mgmt/datashare",
  "mgmt/deploymentmanager",
  "mgmt/desktopvirtualization",
  "mgmt/devcenter",
  "mgmt/developerhub",
  "mgmt/deviceregistry",
  "mgmt/deviceupdate",
  "mgmt/devops",
  "mgmt/devspaces",
  "mgmt/devtestlabs",
  "mgmt/dfp",
  "mgmt/digitaltwins",
  "mgmt/dnc",
  "mgmt/dns",
  "mgmt/dnsresolver",
  "mgmt/domainservices",
  "mgmt/dynatrace",
  "mgmt/edgeorder",
  "mgmt/edgeorderpartner",
  "mgmt/education",
  "mgmt/elastic",
  "mgmt/elasticsan",
  "mgmt/engagementfabric",
  "mgmt/enterpriseknowledgegraph",
  "mgmt/eventgrid",
  "mgmt/eventhub",
  "mgmt/extendedlocation",
  "mgmt/fist",
  "mgmt/fluidrelay",
  "mgmt/frontdoor",
  "mgmt/graphservicesprod",
  "mgmt/guestconfiguration",
  "mgmt/hanaon",
  "mgmt/hardwaresecuritymodules",
  "mgmt/hdinsight",
  "mgmt/healthbot",
  "mgmt/healthcareapis",
  "mgmt/help",
  "mgmt/hybridaks",
  "mgmt/hybridcloud",
  "mgmt/hybridcompute",
  "mgmt/hybridconnectivity",
  "mgmt/hybriddatamanager",
  "mgmt/hybridkubernetes",
  "mgmt/hybridnetwork",
  "mgmt/imagebuilder",
  "mgmt/intune",
  "mgmt/iotcentral",
  "mgmt/iothub",
  "mgmt/iotspaces",
  "mgmt/keyvault",
  "mgmt/kubernetesconfiguration",
  "mgmt/kusto",
  "mgmt/labservices",
  "mgmt/liftrqumulo",
  "mgmt/loadtestservice",
  "mgmt/logic",
  "mgmt/logz",
  "mgmt/m365securityandcompliance",
  "mgmt/machinelearning",
  "mgmt/machinelearningcompute",
  "mgmt/machinelearningexperimentation",
  "mgmt/machinelearningservices",
  "mgmt/maintenance",
  "mgmt/managednetwork",
  "mgmt/managednetworkfabric",
  "mgmt/managedservices",
  "mgmt/managementgroups",
  "mgmt/managementpartner",
  "mgmt/maps",
  "mgmt/mariadb",
  "mgmt/marketplace",
  "mgmt/marketplacecatalog",
  "mgmt/marketplacenotifications",
  "mgmt/marketplaceordering",
  "mgmt/mediaservices",
  "mgmt/migrate",
  "mgmt/migrateprojects",
  "mgmt/mobilenetwork",
  "mgmt/monitor",
  "mgmt/mpcnetworkfunction",
  "mgmt/msi",
  "mgmt/mysql",
  "mgmt/netapp",
  "mgmt/network",
  "mgmt/networkanalytics",
  "mgmt/networkcloud",
  "mgmt/networkfunction",
  "mgmt/newrelic",
  "mgmt/nginx",
  "mgmt/notificationhubs",
  "mgmt/oep",
  "mgmt/operationalinsights",
  "mgmt/operationsmanagement",
  "mgmt/orbital",
  "mgmt/paloaltonetworks",
  "mgmt/peering",
  "mgmt/playwrighttesting",
  "mgmt/policyinsights",
  "mgmt/portal",
  "mgmt/portalservices",
  "mgmt/postgresql",
  "mgmt/postgresqlhsc",
  "mgmt/powerbidedicated",
  "mgmt/powerbiembedded",
  "mgmt/powerbiprivatelinks",
  "mgmt/powerplatform",
  "mgmt/privatedns",
  "mgmt/professionalservice",
  "mgmt/providerhub",
  "mgmt/purview",
  "mgmt/purviewpolicy",
  "mgmt/quantum",
  "mgmt/quota",
  "mgmt/recommendationsservice",
  "mgmt/recoveryservices",
  "mgmt/recoveryservicesbackup",
  "mgmt/recoveryservicesdatareplication",
  "mgmt/recoveryservicessiterecovery",
  "mgmt/redhatopenshift",
  "mgmt/redis",
  "mgmt/redisenterprise",
  "mgmt/relay",
  "mgmt/reservations",
  "mgmt/resourceconnector",
  "mgmt/resourcegraph",
  "mgmt/resourcehealth",
  "mgmt/resourcemover",
  "mgmt/resources",
  "mgmt/riskiq",
  "mgmt/saas",
  "mgmt/scheduler",
  "mgmt/scom",
  "mgmt/scvmm",
  "mgmt/search",
  "mgmt/security",
  "mgmt/securityandcompliance",
  "mgmt/securitydevops",
  "mgmt/securityinsights",
  "mgmt/serialconsole",
  "mgmt/servicebus",
  "mgmt/servicefabricmanagedclusters",
  "mgmt/servicefabricmesh",
  "mgmt/servicelinker",
  "mgmt/servicemap",
  "mgmt/servicenetworking",
  "mgmt/signalr",
  "mgmt/softwareplan",
  "mgmt/solutions",
  "mgmt/sphere",
  "mgmt/sql",
  "mgmt/sqlvirtualmachine",
  "mgmt/stack",
  "mgmt/storage",
  "mgmt/storageactions",
  "mgmt/storagecache",
  "mgmt/storageimportexport",
  "mgmt/storagemover",
  "mgmt/storagepool",
  "mgmt/storagesync",
  "mgmt/storagetasks",
  "mgmt/storsimple1200series",
  "mgmt/storsimple8000series",
  "mgmt/streamanalytics",
  "mgmt/subscription",
  "mgmt/support",
  "mgmt/synapse",
  "mgmt/syntex",
  "mgmt/testbase",
  "mgmt/timeseriesinsights",
  "mgmt/trafficmanager",
  "mgmt/vi",
  "mgmt/videoanalyzer",
  "mgmt/visualstudio",
  "mgmt/vmware",
  "mgmt/vmwarecloudsimple",
  "mgmt/voiceservices",
  "mgmt/web",
  "mgmt/webpubsub",
  "mgmt/windowsesu",
  "mgmt/windowsiot",
  "mgmt/workloadmonitor",
  "mgmt/workloads",
  "svc/agrifood",
  "svc/appconfiguration",
  "svc/applicationinsights",
  "svc/attestation",
  "svc/batch",
  "svc/blobstorage",
  "svc/codesigning",
  "svc/confidentialledger",
  "svc/containerregistry",
  "svc/datalakeanalytics",
  "svc/devcenter",
  "svc/deviceprovisioningservices",
  "svc/deviceupdate",
  "svc/digitaltwins",
  "svc/eventgrid",
  "svc/filestorage",
  "svc/graphrbac",
  "svc/imds",
  "svc/iotcentral",
  "svc/keyvault",
  "svc/loadtestservice",
  "svc/machinelearningservices",
  "svc/marketplacecatalog",
  "svc/mixedreality",
  "svc/monitor",
  "svc/operationalinsights",
  "svc/purview",
  "svc/quantum",
  "svc/queuestorage",
  "svc/schemaregistry",
  "svc/securityinsights",
  "svc/servicefabric",
  "svc/storagedatalake",
  "svc/synapse",
  "svc/timeseriesinsights",
  "svc/videoanalyzer",
  "svc/webpubsub",
]

resolver = "2"