[package]
name = "azure"
version = "0.38.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Project root for all Azure SDK-related crates."
homepage = "https://azure.github.io/azure-sdk"
repository = "https://github.com/Azure/azure-sdk-for-rust/tree/feature/rust-rfc3243"
license.workspace = true
categories = ["compilers", "development-tools"]
keywords = ["azure", "sdk"]
