[workspace]
resolver = "2"
members = [
  "check_api_superset",
  "generate_api_report",
]

[workspace.package]
authors = ["Microsoft"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Azure/azure-sdk-for-rust"
rust-version = "1.85"

[workspace.dependencies]
rustdoc-types = "0.41.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.20"
