[package]
name = "cosmos_read_item_native_tls"
version = "0.1.0"
authors = ["Microsoft"]
edition = "2021"
license = "MIT"
repository = "https://github.com/azure/azure-sdk-for-rust"
publish = false

[dependencies]
azure_core = { version = "0.35.0", default-features = false, features = [
  "reqwest",
  "tokio",
] }
azure_data_cosmos = { path = "../../sdk/cosmos/azure_data_cosmos", default-features = false, features = [
  "hmac_rust",
  "reqwest",
  "native_tls",
] }
azure_identity = { version = "0.35.0", default-features = false, features = [
  "tokio",
] }
clap = { version = "4.6.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
