[package]
name = "azure_core"
version = "0.19.0"
description = "Rust wrappers around Microsoft Azure REST APIs - Core crate"
readme = "README.md"
authors = ["Microsoft Corp."]
license = "MIT"
repository = "https://github.com/azure/azure-sdk-for-rust"
homepage = "https://github.com/azure/azure-sdk-for-rust"
documentation = "https://docs.rs/azure_core"
keywords = ["sdk", "azure", "rest", "iot", "cloud"]
categories = ["api-bindings"]
edition = "2021"
rust-version = "1.70.0"

[dependencies]
async-trait = "0.1"
base64 = "0.21"
bytes = "1.0"
dyn-clone = "1.0"
futures = "0.3"
http-types = { version = "2.12", default-features = false }
log = "0.4"
rand = "0.8"
reqwest = { version = "0.11.14", features = [
  "stream",
], default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", optional = true, features = ["serialize", "serde-types"] }
url = "2.2"
uuid = { version = "1.0" }
pin-project = "1.0"
paste = "1.0"
time = { version = "0.3.10", features = ["serde-well-known", "macros"] }
tokio = {version="1.0", optional=true}
hmac = {version="0.12", optional=true}
sha2 = {version="0.10", optional=true}
openssl = {version="0.10", optional=true}
once_cell = "1.18"

# When target is `wasm32`, include `getrandom` and enable `wasm-bindgen` feature in `time`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
time = { version = "0.3.10", features = ["wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1.0", features = ["default", "macros", "rt", "time"] }
thiserror = "1.0"

[features]
default = []
enable_reqwest = ["reqwest/default-tls"]
enable_reqwest_gzip = ["reqwest/gzip"]
enable_reqwest_rustls = ["reqwest/rustls-tls"]
hmac_rust = ["dep:sha2", "dep:hmac"]
hmac_openssl = ["dep:openssl"]
test_e2e = []
azurite_workaround = []
xml = ["quick-xml"]
tokio-fs = ["tokio/fs", "tokio/sync", "tokio/io-util"]
tokio-sleep = ["tokio"]

[package.metadata.docs.rs]
features = ["xml", "tokio-fs", "enable_reqwest", "enable_reqwest_gzip", "enable_reqwest_rustls", "hmac_rust", "hmac_openssl", "xml"]
