[package]
name = "azure_core"
version = "0.19.0"
description = "Rust wrappers around Microsoft Azure REST APIs - Core crate"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/azure/azure-sdk-for-rust"
documentation = "https://docs.rs/azure_core"
keywords = ["sdk", "azure", "rest", "cloud"]
categories = ["api-bindings"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
dyn-clone = { workspace = true }
futures = { workspace = true }
http-types = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true, optional = true }
url = { workspace = true }
uuid = { workspace = true }
pin-project = { workspace = true }
paste = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }
once_cell = { workspace = true }

# When target is `wasm32`, include `getrandom` and enable `wasm-bindgen` feature in `time`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
time = { workspace = true }
getrandom = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
enable_reqwest = ["reqwest/default-tls"]
enable_reqwest_gzip = ["reqwest/gzip"]
enable_reqwest_rustls = ["reqwest/rustls-tls"]
hmac_rust = ["dep:sha2", "dep:hmac"]
hmac_openssl = ["dep:openssl"]
test_e2e = []
azurite_workaround = []
xml = ["quick-xml"]
tokio-fs = ["tokio/fs", "tokio/sync", "tokio/io-util"]
tokio-sleep = ["tokio"]

[package.metadata.docs.rs]
features = [
  "xml",
  "tokio-fs",
  "enable_reqwest",
  "enable_reqwest_gzip",
  "enable_reqwest_rustls",
  "hmac_rust",
  "hmac_openssl",
  "xml",
]
