[package]
authors = ["Microsoft Corp."]
description = "Rust wrappers around Microsoft Azure REST APIs - Azure Cosmos DB"
documentation = "https://docs.rs/azure_cosmos"
homepage = "https://github.com/azure/azure-sdk-for-rust"
license = "MIT"
name = "azure_cosmos"
readme = "README.md"
repository = "https://github.com/azure/azure-sdk-for-rust"
version = "0.1.0"

categories = ["api-bindings"]
keywords = ["sdk", "azure", "rest", "iot", "cloud"]

edition = "2018"

[dependencies]
azure_core = {path = "../core", version = "0.1.0"}
base64 = "0.13"
chrono = "0.4"
failure = "0.1"
futures = "0.3"
http = "0.2"
hyper = "0.13"
hyper-rustls = "0.21"
log = "0.4"
ring = "0.16"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "2.1"
uuid = {version = "0.8", features = ["v4"]}

[dev-dependencies]
env_logger = "0.7"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "0.2", features = ["macros"]}

[features]
test_e2e = []
