[package]
name = "azure_cosmos"
version = "0.1.0"
description = "Rust wrappers around Microsoft Azure REST APIs - Azure Cosmos DB"
readme = "README.md"
authors = ["Microsoft Corp."]
license = "MIT"
repository = "https://github.com/azure/azure-sdk-for-rust"
homepage = "https://github.com/azure/azure-sdk-for-rust"
documentation = "https://docs.rs/azure_cosmos"

keywords = ["sdk", "azure", "rest", "iot", "cloud"]
categories = ["api-bindings"]

edition = "2018"

[dependencies]
azure_core = { path = "../core", version = "0.1.0" }
ring = "0.16"
base64 = "0.13"
chrono = "0.4"
http = "0.2"
futures = "0.3"
hyper = "0.13"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "2.1"
uuid = { version = "0.8", features = ["v4"] }
hyper-rustls = "0.21"
failure = "0.1"

[dev-dependencies]
env_logger = "0.7"
tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }

[features]
test_e2e = []
