[package]
name = "azure_data_cosmos"
version = "0.1.0"
description = "Rust wrappers around Microsoft Azure REST APIs - Azure Cosmos DB"
readme = "README.md"
authors = ["Microsoft Corp."]
license = "MIT"
repository = "https://github.com/azure/azure-sdk-for-rust"
homepage = "https://github.com/azure/azure-sdk-for-rust"
documentation = "https://docs.rs/azure_data_cosmos"

keywords = ["sdk", "azure", "rest", "iot", "cloud"]
categories = ["api-bindings"]

edition = "2018"

[dependencies]
async-trait = "0.1"
azure_core = { path = "../core", version = "0.1.0" }
ring = "0.16"
base64 = "0.13"
chrono = "0.4"
http = "0.2"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
uuid = { version = "0.8", features = ["v4"] }
thiserror = "1.0"
bytes = "1.0"

[dev-dependencies]
env_logger = "0.9"
tokio = { version = "1", features = ["macros"] }
hyper = "0.14"
hyper-rustls = "0.23"
reqwest = "0.11.0"
stop-token = { version = "0.7.0", features = ["tokio"] }

[features]
test_e2e = []
mock_transport_framework = [ "azure_core/mock_transport_framework"]
