[package]
name = "azure_data_cosmos"
version = "0.5.0"
description = "Rust wrappers around Microsoft Azure REST APIs - Azure Cosmos DB"
readme = "README.md"
authors = ["Microsoft Corp."]
license = "MIT"
repository = "https://github.com/azure/azure-sdk-for-rust"
homepage = "https://github.com/azure/azure-sdk-for-rust"
documentation = "https://docs.rs/azure_data_cosmos"

keywords = ["sdk", "azure", "rest", "iot", "cloud"]
categories = ["api-bindings"]

edition = "2021"

[dependencies]
async-trait = "0.1"
azure_core = { path = "../core", version = "0.4" }
base64 = "0.13"
time = "0.3.10"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
bytes = "1.0"
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
env_logger = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "3.2.7", features = ["derive", "env"] }
reqwest = "0.11.0"
stop-token = { version = "0.7.0", features = ["tokio"] }
mock_transport = { path = "../../eng/test/mock_transport" }

[features]
default = ["azure_core/enable_reqwest"]
test_e2e = []
into_future = []
