[package]
name = "azure_data_kusto"
version = "0.1.0"
description = "Rust wrappers around Microsoft Azure REST APIs - Azure Data Explorer"
readme = "README.md"
license = "MIT"
edition = "2021"
repository = "https://github.com/azure/azure-sdk-for-rust"
homepage = "https://github.com/azure/azure-sdk-for-rust"
documentation = "https://docs.rs/azure_data_kusto"
keywords = ["sdk", "azure", "kusto", "azure-data-explorer"]
categories = ["api-bindings"]

[dependencies]
arrow = { version = "9", optional = true }
azure_core = { path = "../core", version = "0.1", features = [
  "enable_reqwest",
  "enable_reqwest_gzip",
] }
azure_identity = { path = "../identity", version = "0.1" }
async-trait = "0.1"
async-convert = "1"
bytes = "1"
futures = "0.3"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1"
lazy_static = "1.4.0"
hashbrown = "0.12.0"

[dev-dependencies]
env_logger = "0.9"
tokio = { version = "1", features = ["macros"] }

[features]
default = ["arrow"]
mock_transport_framework = ["azure_core/mock_transport_framework"]
into_future = []
test_e2e = []
