[package]
name = "azure_data_tables"
version = "0.2.0"
description = "Azure Table storage crate from the Azure SDK for Rust"
readme = "README.md"
authors = ["Microsoft Corp."]
license = "MIT"
repository = "https://github.com/azure/azure-sdk-for-rust"
homepage = "https://github.com/azure/azure-sdk-for-rust"
documentation = "https://docs.rs/azure_data_tables"
keywords = ["sdk", "azure", "storage", "data-tables"]
categories = ["api-bindings"]
edition = "2021"

[dependencies]
azure_core = { path = "../core", version = "0.2", default-features=false}
azure_storage = { path = "../storage", version = "0.2", default-features=false, features=["account"]}
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
http = "0.2"
log = "0.4"
once_cell = "1.0"
serde = { version = "1.0" }
serde_derive = "1.0"
serde_json = "1.0"
serde-xml-rs = "0.5"
uuid = { version = "1.0", features = ["v4"] }
url = "2.2"
md5 = "0.7"
ring = "0.16"
base64 = "0.13"
async-trait = "0.1.52"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["enable_reqwest"]
test_e2e = []
enable_reqwest = ["azure_core/enable_reqwest", "azure_storage/enable_reqwest"]
enable_reqwest_rustls = ["azure_core/enable_reqwest_rustls", "azure_storage/enable_reqwest_rustls"]

[[example]]
name = "table_service_client00"