[package]
name = "azure_data_tables"
version = "0.19.0"
description = "Azure Table storage crate from the Azure SDK for Rust"
readme = "README.md"
authors = ["Microsoft Corp."]
license = "MIT"
repository = "https://github.com/azure/azure-sdk-for-rust"
homepage = "https://github.com/azure/azure-sdk-for-rust"
documentation = "https://docs.rs/azure_data_tables"
keywords = ["sdk", "azure", "storage", "data-tables"]
categories = ["api-bindings"]
edition = "2021"

[dependencies]
azure_core = { path = "../core", version = "0.19" }
azure_storage = { path = "../storage", version = "0.19", default-features = false }
bytes = "1.0"
time = "0.3.10"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features=["derive"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11"

[features]
default = ["enable_reqwest", "hmac_rust"]
test_e2e = []
enable_reqwest = ["azure_core/enable_reqwest", "azure_storage/enable_reqwest"]
enable_reqwest_rustls = ["azure_core/enable_reqwest_rustls", "azure_storage/enable_reqwest_rustls"]
test_integration = []
hmac_rust = ["azure_core/hmac_rust"]
hmac_openssl = ["azure_core/hmac_openssl"]

[package.metadata.docs.rs]
features = ["enable_reqwest", "enable_reqwest_rustls", "hmac_rust", "hmac_openssl"]
