[package]
name = "azure_databricks"
version = "0.1.0"
description = "Rust wrappers around Microsoft Azure Databricks REST APIs"
readme = "README.md"
authors = ["Microsoft Corp."]
repository = "https://github.com/azure/azure-sdk-for-rust"
homepage = "https://github.com/azure/azure-sdk-for-rust"
documentation = "https://docs.rs/azure_databricks"
keywords = ["sdk", "azure", "cloud", "databricks", "rest"]
categories = ["api-bindings"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = { path = "../core", version = "0.1.0" }

[dev-dependencies]
env_logger = "0.9.0"


