[package]
name = "azure_databricks"
version = "0.1.0"
description = "Rust wrappers around Microsoft Azure Databricks REST APIs"
readme = "README.md"
authors = ["Microsoft Corp."]
repository = "https://github.com/azure/azure-sdk-for-rust"
homepage = "https://github.com/azure/azure-sdk-for-rust"
documentation = "https://docs.rs/azure_databricks"
keywords = ["sdk", "azure", "cloud", "databricks", "rest"]
categories = ["api-bindings"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = { path = "../core", version = "0.1.0" }
base64 = "0.13"
bytes = "1.0"
reqwest = {version = "0.11.6", features = ["json"]}
tokio = { version = "1.0", features = ["macros"] }
serde = {version = "1.0.130"}
url = "2.2"


[dev-dependencies]
env_logger = "0.9.0"

[features]
default = ["clusters"]
clusters = []

[[example]]
name = "cluster_list"
required-features = ["clusters"]


