[package]
name = "azure_event_grid"
version = "0.1.0"
description = "Rust wrappers around Microsoft Azure Event Grid REST APIs"
readme = "README.md"
authors = ["Microsoft Corp."]
license = "MIT"
repository = "https://github.com/azure/azure-sdk-for-rust"
homepage = "https://github.com/azure/azure-sdk-for-rust"
documentation = "https://docs.rs/azure_event_grid"
keywords = ["sdk", "azure", "rest", "iot", "cloud"]
categories = ["api-bindings"]
edition = "2018"

[dependencies]
azure_core = { path = "../core", version = "0.1.0" }
chrono = "0.4"
http = "0.2"
hyper = "0.13"
hyper-rustls = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
url = "2.1"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
