[package]
name = "azure_identity"
version = "0.5.0"
description = "Rust wrappers around Microsoft Azure REST APIs - Azure identity helper crate"
readme = "README.md"
authors = ["Microsoft Corp."]
license = "MIT"
repository = "https://github.com/azure/azure-sdk-for-rust"
homepage = "https://github.com/azure/azure-sdk-for-rust"
documentation = "https://docs.rs/azure_identity"
keywords = ["sdk", "azure", "rest", "iot", "cloud"]
categories = ["api-bindings"]
edition = "2021"

[dependencies]
azure_core = { path = "../core", version = "0.4" }
async-lock = "2.5"
oauth2 = { version = "4.0.0", default-features = false }
url = "2.2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3.10", features = ["local-offset"] }
serde_json = "1.0"
log = "0.4"
async-trait = "0.1"
openssl = { version = "0.10",  optional=true }
base64 = "0.13.0"
uuid = { version = "1.0",  features = ["v4"] }
# work around https://github.com/rust-lang/rust/issues/63033
fix-hidden-lifetime-bug = "0.2"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"], default-features = false }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.9"
serde_test = "1"
azure_security_keyvault = { path = "../security_keyvault", default_features = false }

[features]
default = ["development", "enable_reqwest"]
enable_reqwest = [
  "azure_core/enable_reqwest",
]
enable_reqwest_rustls = [
  "azure_core/enable_reqwest_rustls",
]
development = []
test_e2e = []
client_certificate = ["openssl"]

[[example]]
name="client_certificate_credentials"
required-features = ["client_certificate"]
